--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -471,7 +471,7 @@
       <dependency>
         <groupId>com.sun.activation</groupId>
         <artifactId>javax.activation</artifactId>
-        <version>${javax-activation.version}</version>
+        <version>1.2.0</version>
       </dependency>
       <dependency>
         <groupId>javax.el</groupId>
@@ -554,7 +554,6 @@
     <bouncycastle.version>1.64</bouncycastle.version>
     <!-- == Other JavaEE/SE APIs == -->
     <javax-mail.version>1.6.2</javax-mail.version>
-    <javax-activation.version>1.2.0</javax-activation.version>
     <javax-el.version>3.0.1-b06</javax-el.version>
     <javax-inject.version>1</javax-inject.version>
     <javax-jsp.version>2.3.3</javax-jsp.version>
