--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -383,6 +383,11 @@
         <version>${commons-collections.version}</version>
       </dependency>
       <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>${commons-fileupload.version}</version>
+      </dependency>
+      <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>${commons-io.version}</version>
@@ -543,6 +548,7 @@
     <!-- == Apache Commons == -->
     <commons-beanutils.version>1.9.4</commons-beanutils.version>
     <commons-collections.version>3.2.2</commons-collections.version>
+    <commons-fileupload.version>1.3.3</commons-fileupload.version>
     <commons-io.version>2.6</commons-io.version>
     <!-- == OpenPDF == -->
     <openpdf.version>1.0.5</openpdf.version>
