--- a/terasoluna-gfw-dependencies/terasoluna-gfw-jpa-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-jpa-dependencies/pom.xml
@@ -22,11 +22,22 @@
     </dependency>
     <!-- == End Spring == -->
 
-    <!-- Hibernate -->
+    <!-- == Begin Hibernate == -->
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.activation</groupId>
+          <artifactId>javax.activation-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
+    <dependency>
+      <groupId>jakarta.activation</groupId>
+      <artifactId>jakarta.activation-api</artifactId>
+    </dependency>
+    <!-- == End Hibernate == -->
 
     <!-- == Begin Joda-Time == -->
     <dependency>
