--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -337,6 +337,14 @@
       </dependency>
       <!-- == End MyBatis == -->
 
+      <!-- == Begin Hibernate == -->
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>${org.hibernate.version}</version>
+      </dependency>
+      <!-- == End Hibernate == -->
+
       <!-- == Begin Dozer== -->
       <dependency>
         <groupId>com.github.dozermapper</groupId>
@@ -522,6 +530,8 @@
     <!-- == MyBatis3 == -->
     <org.mybatis.version>3.5.3</org.mybatis.version>
     <org.mybatis.spring.version>2.0.3</org.mybatis.spring.version>
+    <!-- == Hibernate == -->
+    <org.hibernate.version>5.4.24.Final</org.hibernate.version>
     <!-- == Dozer== -->
     <dozer.version>6.5.0</dozer.version>
     <!-- == Joda-Time == -->
