--- a/terasoluna-gfw-dependencies/terasoluna-gfw-common-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-common-dependencies/pom.xml
@@ -54,6 +54,12 @@
       <artifactId>spring-context</artifactId>
     </dependency>
     <!-- == End Spring == -->
+    <!-- == Begin BeanValidation == -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+    </dependency>
+    <!-- == End BeanValidation == -->
     <!-- == Begin Other JakartaEE/SE APIs == -->
     <dependency>
       <groupId>jakarta.inject</groupId>
