Set doclint of maven-javadoc-plugin to none #1061
(cherry picked from commit 439471f3088628d2853b754b528e8ab0df59cafe)

--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -97,6 +97,7 @@
             <archive>
               <addMavenDescriptor>false</addMavenDescriptor>
             </archive>
+            <doclint>none</doclint>
           </configuration>
           <executions>
             <execution>
