--- a/terasoluna-gfw-dependencies/terasoluna-gfw-web-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-web-dependencies/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>terasoluna-gfw-dependencies</artifactId>
     <groupId>org.terasoluna.gfw</groupId>
-    <version>5.7.0-SNAPSHOT</version>
+    <version>5.7.0.RC1</version>
     <relativePath>../../terasoluna-gfw-dependencies/pom.xml</relativePath>
   </parent>
   <artifactId>terasoluna-gfw-web-dependencies</artifactId>
