--- a/terasoluna-gfw-dependencies/terasoluna-gfw-jodatime-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-jodatime-dependencies/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.terasoluna.gfw</groupId>
     <artifactId>terasoluna-gfw-dependencies</artifactId>
-    <version>5.6.2-SNAPSHOT</version>
+    <version>5.6.2.RC1</version>
     <relativePath>../../terasoluna-gfw-dependencies/pom.xml</relativePath>
   </parent>
   <artifactId>terasoluna-gfw-jodatime-dependencies</artifactId>
