check license header in travis #1089
(cherry picked from commit f74b245807f1f9f9b0c4b3f0a1fbd2948915a949)

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ install: true
 script:
   - mvn xml:check-format -P xml-check-format
   - mvn formatter:validate -P common-libs
+  - mvn license:check -P common-libs
   - mvn -U clean install -P default
   - mvn -U jacoco:report coveralls:report -P common-libs
